frontend/src/app/(app)/upload/page.module.css
.pageEmpty {
    height: 100%;
    width: 100%;
    display: flex;
    align-items: center; /* vertical */
    justify-content: center; /* horizontal */
}

.page {
    height: 100%;
    display: flex;
    flex-direction: column;
    padding: 24px 28px;
}

.toolbar {
    align-self: flex-start;
    margin-bottom: 16px;
}

.gallery_tags_container {
    height: 100%;
    display: flex;
    flex-direction: row;
}

.gallery_select_container {
    display: flex;
    flex-direction: column;
    width: 100%;
}

.select_container {
    display: flex;
    flex-direction: row;
    gap: 0.5rem;
    padding-bottom: 5px;
}

.gallery {
    height: 100%;
    min-height: 100%;
    padding-bottom: 10%;

    overflow-y: auto;
    margin-right: 28px;
}

.tag_change_container {
    height: 100%;
    padding-bottom: 5%;
}

.select_button {
    border: var(--border-info);
    filter: var(--dropshadow);
    padding: 6px 12px;
    border-radius: var(--border-radius);

    background-color: var(--base);

    color: var(--text);
    font-size: 1rem;

    cursor: pointer;
}

.select_button:hover {
    background-color: var(--surface0);
}

.viewerBackdrop {
    position: fixed;
    inset: 0;
    background: rgba(0, 0, 0, 0.2);
    backdrop-filter: blur(1px);
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 50;
    pointer-events: none;
}

.progress_bar_modal {
    border: var(--border-info);
    border-radius: var(--border-radius);
    filter: var(--dropshadow);
    background: var(--base);
    padding: 2rem;
}

.progress_label {
    display: flex;
    flex-direction: column;
    gap: 0.75rem;
    align-items: center;
}

.progress_bar {
    height: 50px;
    width: 250px;
}

